@@ -82,7 +82,8 @@ setup(name="qmtest",
       data_files=[include('share/qmtest/messages', '*.txt'),
                   include('share/qmtest/diagnostics', '*.txt'),
                   # The documentation.
-                  ('share/doc/qmtest', ('README', 'COPYING')),
+                  ('share/doc/qmtest', ('ChangeLog', 'README', 'NEWS', 'COPYING', 'LICENSE.OPL')),
+                  include('share/man/man1', '*'),
                   include('share/doc/qmtest/html/tutorial', '*'),
                   include('share/doc/qmtest/print', 'tutorial.pdf'),
                   include('share/doc/qmtest/examples/xml_tdb', '*'),
